# my-fastapi-boilerplate

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
my-fastapi-{{cookiecutter.app_name}}/: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.app.yaml  docker-compose.app.yml  docker-compose.kafka.yml  docker-compose.mongo.yaml  docker-compose.postgres.yaml  docker-compose.postgres.yml  docker-compose.redis.yaml  docker-compose.redis.yml  justfile  pyproject.toml
my-fastapi-{{cookiecutter.app_name}}/src/: console.py  exceptions.py  logger.py
my-fastapi-{{cookiecutter.app_name}}/src/application/: exceptions.py
my-fastapi-{{cookiecutter.app_name}}/src/application/common/: command.py  query.py
my-fastapi-{{cookiecutter.app_name}}/src/domain/: exceptions.py
my-fastapi-{{cookiecutter.app_name}}/src/domain/common/: entity.py  event.py  exceptions.py  value_object.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/: exceptions.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/authenticator/: argon.py  base.py  exceptions.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/cache/common/: __init__.py  base.py  memory.py  redis.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/common/: base.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/connection_manager/common/: base.py  concurrent.py  default.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/connection_manager/fastapi/: base.py  concurrent.py  default.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/containers/: app.py  base.py  mock.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/containers/cache/: memory.py  redis.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/containers/producer/: kafka.py  memory.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/containers/repositories/: memory.py  mongo.py  sql.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/dispatchers/: base.py  dispatcher.py  exceptions.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/orm/migrations/: env.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/orm/models/: base.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/producers/: base.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/producers/common/: memory.py
my-fastapi-{{cookiecutter.app_name}}/src/infrastructure/repositories/common/: base.py  memory.py  mongo.py  redis.py  sql.py
my-fastapi-{{cookiecutter.app_name}}/src/interface/: exceptions.py
my-fastapi-{{cookiecutter.app_name}}/src/interface/api/: exception_handlers.py  exceptions.py  fields.py  lifespan.py  main.py  middlewares.py  schemas.py  validators.py
my-fastapi-{{cookiecutter.app_name}}/src/interface/api/base/: base.py  router.py  schemas.py
my-fastapi-{{cookiecutter.app_name}}/src/lib/: dt.py  list.py
my-fastapi-{{cookiecutter.app_name}}/src/presentation/api/base/: __init__.py
my-fastapi-{{cookiecutter.app_name}}/src/settings/: config.py
my-fastapi-{{cookiecutter.app_name}}/src/tests/: conftest.py
my-fastapi-{{cookiecutter.app_name}}/src/tests/e2e/: conftest.py  test_health_check.py
my-fastapi-{{cookiecutter.app_name}}/src/tests/integration/: conftest.py
my-fastapi-{{cookiecutter.app_name}}/src/tests/unit/: conftest.py
my-fastapi-{{cookiecutter.project_name}}/: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.app.yml  docker-compose.kafka.yml  docker-compose.mongo.yml  docker-compose.postgres.yml  docker-compose.yml  justfile  pyproject.toml
my-fastapi-{{cookiecutter.project_name}}/src/: alembic.ini  console.py  logger.py  logger.yaml
my-fastapi-{{cookiecutter.project_name}}/src/application/: exceptions.py
my-fastapi-{{cookiecutter.project_name}}/src/application/api/: actions.py  exception_handlers.py  lifespan.py  main.py  schemas.py
my-fastapi-{{cookiecutter.project_name}}/src/application/api/base/: base.py  router.py  schemas.py
my-fastapi-{{cookiecutter.project_name}}/src/domain/common/: entity.py  query.py  value_object.py
my-fastapi-{{cookiecutter.project_name}}/src/infrastructure/containers/: base.py
my-fastapi-{{cookiecutter.project_name}}/src/infrastructure/di/: app.py  base.py  mock.py
my-fastapi-{{cookiecutter.project_name}}/src/infrastructure/dispatchers/: base.py  exceptions.py
my-fastapi-{{cookiecutter.project_name}}/src/infrastructure/orm/migrations/: env.py
my-fastapi-{{cookiecutter.project_name}}/src/infrastructure/orm/models/: base.py
my-fastapi-{{cookiecutter.project_name}}/src/infrastructure/producers/: base.py  memory.py
my-fastapi-{{cookiecutter.project_name}}/src/infrastructure/repositories/common/: base.py  sql.py
my-fastapi-{{cookiecutter.project_name}}/src/presentation/api/: actions.py  exception_handlers.py  lifespan.py  main.py
my-fastapi-{{cookiecutter.project_name}}/src/presentation/api/base/: base.py  schemas.py
my-fastapi-{{cookiecutter.project_name}}/src/settings/: config.py
my-fastapi-{{cookiecutter.project_name}}/src/tests/e2e/: conftest.py
my-fastapi-{{cookiecutter.project_name}}/src/tests/logic/: conftest.py
src/application/api/: lifespan.py  schemas.py
src/application/api/base/: base.py  router.py
