[tool.poetry]
name = "my-fastapi"
version = "0.1.0"
description = ""
authors = ["Max <maxim@akimkin>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.33.0"}
pydantic = "^2.10.3"
dishka = "^1.4.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
