[project]
name = "my-fastapi-{{cookiecutter.app_name}}"
version = "0.1.0"
description = ""
authors = [
    {name = "Max",email = "maxim@akimkin.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "dishka (>=1.4.2,<2.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "orjson (>=3.10.14,<4.0.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "redis[hiredis] (>=5.2.1,<6.0.0)",
    "aiojobs (>=1.3.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.1,<3.0.0)"
]

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
ruff = "^0.9.0"
pre-commit = "^4.0.1"
mypy = "^1.14.1"
pytest = "^8.3.4"
faker = "^33.3.0"
pytest-asyncio = "^0.25.2"
aiosqlite = "^0.20.0"

[tool.poetry.group.sql.dependencies]
asyncpg = "^0.30.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.37"

[tool.poetry.group.mongo.dependencies]
motor = "^3.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
lint.select = [
    "F",  # Pyflakes
    "E",  # PEP8 errors
    "W",  # PEP8 warnings
    "C",  # Cyclomatic complexity
    "B",  # Buggyness (e.g., flake8-bugbear)
    "Q",  # Flake8-Quotes
    "S",  # Security (e.g., Bandit)
]

lint.ignore = [
    "E501",  # Line length (handled by Black)
]

line-length = 84

[tool.ruff.lint.flake8-quotes]
multiline-quotes = "double"
inline-quotes = "double"
avoid-escape = true

[tool.ruff.lint.per-file-ignores]
"src/tests/**/*.py" = [
    "S101",
]
